--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "autoprefixer": "^9.7.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
+    "eslint": "^7.3.1",
+    "eslint-plugin-react": "^7.20.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
